changed the name and logo
